@@ -1,79 +1,94 @@
 package com.example.InventoryManagementSystem.service;
 
-import com.example.InventoryManagementSystem.dto.*;
+import com.example.InventoryManagementSystem.dto.PaymentTransactionRequestDTO;
+import com.example.InventoryManagementSystem.dto.PaymentTransactionResponseDTO;
 import com.example.InventoryManagementSystem.model.PaymentTransaction;
 import com.example.InventoryManagementSystem.Repository.PaymentTransactionRepository;
 import com.example.InventoryManagementSystem.service.PaymentTransactionService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import java.time.OffsetDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class PaymentTransactionServiceImpl implements PaymentTransactionService {
 
-    private final PaymentTransactionRepository repo;
+    private final PaymentTransactionRepository repository;
 
     @Override
     public PaymentTransactionResponseDTO create(PaymentTransactionRequestDTO dto) {
 
-        PaymentTransaction p = PaymentTransaction.builder()
-                .invoiceId(dto.getInvoiceId())
-                .paymentMethod(dto.getPaymentMethod())
-                .transactionReference(dto.getTransactionReference())
-                .amount(dto.getAmount())
-                .build();
+        PaymentTransaction payment = new PaymentTransaction();
 
-        repo.save(p);
-        return map(p);
+        payment.setInvoiceId(dto.getInvoiceId());
+        payment.setPaymentMethod(dto.getPaymentMethod());
+        payment.setTransactionReference(dto.getTransactionReference());
+        payment.setAmount(dto.getAmount());
+
+        payment.setPaymentDate(
+                dto.getPaymentDate() != null
+                        ? dto.getPaymentDate()
+                        : OffsetDateTime.now()
+        );
+
+        PaymentTransaction saved = repository.save(payment);
+
+        return mapToResponse(saved);
     }
 
     @Override
     public List<PaymentTransactionResponseDTO> getAll() {
-        return repo.findAll().stream().map(this::map).toList();
+        return repository.findAll()
+                .stream()
+                .map(this::mapToResponse)
+                .collect(Collectors.toList());
     }
 
     @Override
     public PaymentTransactionResponseDTO getById(Long id) {
-        PaymentTransaction p = repo.findById(id)
+
+        PaymentTransaction payment = repository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Payment not found"));
 
-        return map(p);
+        return mapToResponse(payment);
     }
 
     @Override
-    public PaymentTransactionResponseDTO update(Long id, PaymentTransactionRequestDTO dto) {
+    public PaymentTransactionResponseDTO update(Long id,
+                                                PaymentTransactionRequestDTO dto) {
 
-        PaymentTransaction p = repo.findById(id)
+        PaymentTransaction payment = repository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Payment not found"));
 
-        p.setInvoiceId(dto.getInvoiceId());
-        p.setPaymentMethod(dto.getPaymentMethod());
-        p.setTransactionReference(dto.getTransactionReference());
-        p.setAmount(dto.getAmount());
+        payment.setInvoiceId(dto.getInvoiceId());
+        payment.setPaymentMethod(dto.getPaymentMethod());
+        payment.setTransactionReference(dto.getTransactionReference());
+        payment.setAmount(dto.getAmount());
+        payment.setPaymentDate(dto.getPaymentDate());
 
-        repo.save(p);
+        PaymentTransaction updated = repository.save(payment);
 
-        return map(p);
+        return mapToResponse(updated);
     }
 
     @Override
     public void delete(Long id) {
-        PaymentTransaction p = repo.findById(id)
-                .orElseThrow(() -> new RuntimeException("Payment not found"));
-
-        repo.delete(p);
+        repository.deleteById(id);
     }
 
-    private PaymentTransactionResponseDTO map(PaymentTransaction p) {
+    private PaymentTransactionResponseDTO mapToResponse(
+            PaymentTransaction payment) {
+
         return PaymentTransactionResponseDTO.builder()
-                .transactionId(p.getTransactionId())
-                .invoiceId(p.getInvoiceId())
-                .paymentMethod(p.getPaymentMethod())
-                .transactionReference(p.getTransactionReference())
-                .amount(p.getAmount())
-                .paymentDate(p.getPaymentDate())
+                .transactionId(payment.getTransactionId())
+                .invoiceId(payment.getInvoiceId())
+                .paymentMethod(payment.getPaymentMethod())
+                .transactionReference(payment.getTransactionReference())
+                .amount(payment.getAmount())
+                .paymentDate(payment.getPaymentDate())
                 .build();
     }
 }
